# crowd-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt
detection_tools/: detector.py  video_utils.py
src/: main.py
templates/: index.html
